k8s/redis-statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: skillsets
spec:
  selector:
    matchLabels:
      app: redis # has to match .spec.template.metadata.labels
  serviceName: "redis"
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        app: redis # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: redis
        image: redis:7
        command:
          - redis-server
          - --save
          - "60"
          - "1"
          - --loglevel
          - debug
        resources:
          requests:
            cpu: "256m"
            memory: "512M"
        ports:
        - containerPort: 6379
          name: redis-port
        volumeMounts:
        - name: redis-data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-data
    spec:
      accessModes: [ "ReadWriteMany" ]
      storageClassName: "efs-sc-dynamic"
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: skillsets
spec:
  selector:
    app: redis
  type: ClusterIP
  ports:
  - name: redis-port
    protocol: TCP
    port: 6379
    targetPort: 6379
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort: 
#---
#apiVersion: autoscaling/v1
#kind: HorizontalPodAutoscaler
#metadata:
#  name: redis
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Statefulesets
#    name: redis
#  maxReplicas: 20
#  minReplicas: 1
#  targetCPUUtilizationPercentage: 70
---
# apiVersion: autoscaling/v2beta2
# kind: HorizontalPodAutoscaler
# metadata:
#   name: redis
#   namespace: skillsets
# spec:
#   scaleTargetRef:
#     apiVersion: apps/v1
#     kind: StatefulSet
#     name: redis
#   minReplicas: 1
#   maxReplicas: 20
#   metrics:
#   - type: Resource
#     resource:
#       name: cpu
#       target:
#         type: Utilization
#         averageUtilization: 70
#   - type: Resource
#     resource:
#       name: memory
#       target:
#         type: Utilization
#         averageUtilization: 70
