k8s/skillsets-ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillsets-ingress
  namespace: skillsets
  annotations:
      alb.ingress.kubernetes.io/group.name: api
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
      # SSL Redirect Setting
      alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
  - host: skillsets.lmasu.co.za
    http:
      paths:
      - path: / # SSL Redirect Setting
        pathType: Prefix
        backend:
          service:
            name: ssl-redirect
            port:
               name: use-annotation
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skillsets
            port:
              number: 5000
